# auto_ADmask

./: .gitignore  batch_mask.ipynb  generate_basic_mask.py  pyproject.toml  test_mask.ipynb
.ipynb_checkpoints/: test_mask-checkpoint.ipynb
.pixi/: envs
mask_baseline_output/: Cu2O_liquid_pdf_20260314-140254_db261a_primary-dk_sub_image-00000_summary.json
test_data/: CeO2_20250606-104726_164307.json  CeO2_20250606-104726_164307_pyfai.poni  Cs_000_Br_100_Pb_100_OLA_020_PF_018_Tol_1100_20250607-195546_91db25_auto_mask.xy  Cs_000_Br_100_Pb_100_OLA_020_PF_018_Tol_1100_20250607-195546_91db25_pdfstream.xy  Insitu_CeO2_powder_wall_PDF_20260329-222251_96924f_dioptas.poni  Insitu_CeO2_powder_wall_PDF_20260329-222251_96924f_pyfai.poni
